@@ -20,7 +20,8 @@ extern "C" {
 
    size_t ds_array_length (const ds_array_t *ll);
    void *ds_array_get (const ds_array_t *ll, size_t i);
-   void ds_array_iterate (const ds_array_t *ll, void (*fptr) (void *));
+   void ds_array_iterate (const ds_array_t *ll,
+                          void (*fptr) (void *, void *), void *param);
 
    void *ds_array_ins_tail (ds_array_t *ll, void *el);
    void *ds_array_ins_head (ds_array_t *ll, void *el);
